css/dashboard.css
/*
 * Base structure
 */

body::after {
  content: "";
  background: url(../img/silver-fern.svg);
  background-position: center top;
  opacity: 0.30;
  background-size: contain;
  background-repeat: no-repeat;
  background-blend-mode: lighten;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
}

img.logo {
  width: 80px;
  margin-top:10px;
  margin-bottom:10px;
  margin-left: 10px;
  margin-right: auto;
}

a.tip {
  text-decoration: none;
}

a.tip:hover {
  position             : relative;
}

a.tip span {
  display              : none
}

a.tip:hover span {
  background: #000000;
  opacity: 0.8;
  border: none;
  border-radius: 5px 5px 5px 5px;
  font-family: calibri, verdana, arial, comic sans;
  font-size: 12pt;
  text-decoration: none;
  white-space: nowrap;
  color: #FFFFFF;
  padding: 6px 6px 6px 6px;
  margin: 10px;
  display: block;
  z-index: 50;
  position: absolute;
  top: 10px;
}

.moduleusers td {
  white-space: nowrap;
  hyphens: none;
}

table a {
  text-decoration: none;
}

table a:hover {
  text-decoration: underline;
}

/*
 * Main content
 */

.ModuleIcon {
  width: 65px;
  height: 65px;
}

.ModuleIconW {
  width: 130px;
  height: 65px;
}
.img {
  height: 30px;
}

#mainbox {
  padding-bottom: 80px;
}

.footer {
  position: relative;
  margin-top: -80px!important;
  height: 80px;
  padding-top: 20px!important;
}

/*
 * Tables
 */

.table-flag {
  height: 15px;
}

.table-status {
  height: 25px;
}

.table-head {
  font-weight: bold;
}

.table-center * {
  text-align: center !important;
}

.material-icons {
  font-size: 24px;
}

ul.act-calls {
  list-style: none;
  padding-left: 0;
  margin-bottom: 0;
}

ul.act-calls li {
  position: relative;
  top: 0;
  left: 0;
}

nav.bg-dark {
  background-color: #000!important;
  background-image: linear-gradient(to right, #000, #002189);
}

.recentactivity {
  min-height: 30ex;
}
.recentactivity .card {
  width: 8rem;
  margin-right: 0.5em;
  margin-bottom: 0.5em;
}
.recentactivity li {
  padding-left: 0.5em;
}
.card-title h5 {
  margin-bottom: 0.2ex;
}
.shortname {
  font-size: smaller;
}
@media (max-width: 481px) {
    .navbar-brand { margin-right: 0px; }
    .navbar-brand>img {width: 250px; height: 44px;}
}

/* Responsive column widths for table headers
 * (active on md screens/768px and up) */
 @media (min-width: 768px) {
   .w-md-16 {
     width: 16.666667% !important;
   }
   .w-md-8 {
     width: 8.333333% !important;
   }
 }

